--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser": "~11.0.9",
     "@angular/platform-browser-dynamic": "~11.0.9",
     "@angular/router": "~11.0.9",
+    "@ng-bootstrap/ng-bootstrap": "^9.0.2",
     "auth0-js": "^9.14.3",
     "bootstrap": "^4.6.0",
     "highcharts": "^8.2.2",
